# GenFFI

./: .travis.yml  CMakeLists.txt  ISerializer.hpp  Parser.cpp  Parser.hpp  README.md  ToLua.cpp  ToLua.hpp  ToMono.cpp  ToMono.hpp  Utils.cpp  Utils.hpp  Version.hpp  main.cpp
CI/: before_install.sh  before_script.sh  script.sh
cmake/: FindLibClang.cmake
test/: CTypes.h  Platform.h  README  api.h
test/Functions/: Server.h
